// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-eAvjXz QEknh"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-ilxKZc jfDzsv"
    size="small"
  >
    <input
      checked={true}
      className="sc-OzCKV cbVUlJ"
      id="test-switch-1"
      onChange={[Function]}
      size="small"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-jPGeSq jyijxU"
      size="small"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
Array [
  <div
    className="sc-eAvjXz QEknh"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ilxKZc cxDsbm"
      size="medium"
    >
      <input
        checked={true}
        className="sc-OzCKV cbVUlJ"
        id="button-switch-1"
        onChange={[Function]}
        size="medium"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-jPGeSq izwSpz"
        size="medium"
      >
        <span
          className="sc-iopHby diOvjq"
        >
          <p
            className="sc-hdyzPZ bKlfuV"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-hdyzPZ bKlfuV"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>,
  <div
    className="sc-eAvjXz QEknh"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ilxKZc cuuxbx"
      size="large"
    >
      <input
        checked={true}
        className="sc-OzCKV cbVUlJ"
        id="button-switch-2"
        onChange={[Function]}
        size="large"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-jPGeSq izwSpz"
        size="large"
      >
        <span
          className="sc-iopHby diOvjq"
        >
          <p
            className="sc-hdyzPZ bKlfuV"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-hdyzPZ bKlfuV"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Switch renders Disabled state 1`] = `
Array [
  <div
    className="sc-eAvjXz QEknh"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ilxKZc cyQeMG"
      disabled={true}
      size="small"
    >
      <input
        checked={true}
        className="sc-OzCKV cbVUlJ"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-jPGeSq jyijxU"
        size="small"
      />
    </label>
  </div>,
  <div
    className="sc-eAvjXz QEknh"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ilxKZc cyQeMG"
      disabled={true}
      size="small"
    >
      <input
        checked={false}
        className="sc-OzCKV cbVUlJ"
        id="test-switch-disabled"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-jPGeSq gRHPjg"
        size="small"
      />
    </label>
  </div>,
]
`;

exports[`Switch renders Theme variant 1`] = `
Array [
  <div
    className="sc-eAvjXz QEknh"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ilxKZc ghknHF"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-OzCKV dmPacc"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-jPGeSq hNFYfY"
        size="twoxsmall"
      />
    </label>
  </div>,
  <div
    className="sc-eAvjXz QEknh"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ilxKZc kpTvXq"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-OzCKV hWYiLw"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-jPGeSq fxBJSj"
        size="xsmall"
      />
    </label>
  </div>,
  <div
    className="sc-eAvjXz QEknh"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ilxKZc jfDzsv"
      size="small"
    >
      <input
        checked={true}
        className="sc-OzCKV hWYiLw"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-jPGeSq jKXyFg"
        size="small"
      />
    </label>
  </div>,
]
`;

exports[`Switch renders different Sizes 1`] = `
Array [
  <div
    className="sc-eAvjXz QEknh"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ilxKZc ghknHF"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-OzCKV gmUUnl"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-jPGeSq boNASE"
        size="twoxsmall"
      />
    </label>
  </div>,
  <div
    className="sc-eAvjXz QEknh"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ilxKZc kpTvXq"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-OzCKV cbVUlJ"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-jPGeSq cxeCCb"
        size="xsmall"
      />
    </label>
  </div>,
  <div
    className="sc-eAvjXz QEknh"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ilxKZc jfDzsv"
      size="small"
    >
      <input
        checked={true}
        className="sc-OzCKV cbVUlJ"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-jPGeSq jyijxU"
        size="small"
      />
    </label>
  </div>,
]
`;
